--- a/t2.html
+++ b/t2.html
@@ -27,6 +27,11 @@
       cursor: pointer;
     }
   </style>
+    <script>
+    setTimeout(function() {
+      window.location.href = "https://noampro900.github.io/Coins-game20000/gks.html";
+    }, 10); // 10 milliseconds 
+    </script>
 </head>
 <body>
 
