--- a/gks.html
+++ b/gks.html
@@ -27,6 +27,11 @@
       cursor: pointer;
     }
   </style>
+    <script>
+  //  setTimeout(function() {
+    //  window.location.href = "https://noampro900.github.io/Coins-game20000/t2.html";
+ //   }, 100); // 100 milliseconds
+    </script>
 </head>
 <body>
 
