--- a/gks.html
+++ b/gks.html
@@ -50,7 +50,7 @@
 
 
   <button onclick="upgradePower()">Upgrade Wallet</button>
-  <button id="stealButton" onclick="stealFromBot()" disabled>Steal from Bot</button>
+  <button id="stealButton" onclick="stealFromBot()" >Steal from Bot</button>
   <div id="botStatus"></div>
   
   
