--- a/gks.html
+++ b/gks.html
@@ -226,7 +226,7 @@
 
     function stealFromBot() {
       const now = Date.now();
-      if (now - lastStealByPlayer < 86400000 || coins < 15) {
+      if (now - lastStealByPlayer < 0000 || coins < 15) {
         alert("You need to wait 24 hours and have at least 15 coins!");
         return;
       }
