--- a/gks.html
+++ b/gks.html
@@ -37,6 +37,7 @@
 
   <div id="coinLabel">Coins: 0</div>
   <div id="powerLabel">Storage Power: 1</div>
+  <div>lose or win coins! below the text in the image</div>
   <img id="gambleButton" src="https://lh3.googleusercontent.com/gps-cs-s/AC9h4npqh-DshHZfa9UKc1BqkyN4k6JWi74wVRhARqzDinDbezY--Dca20CSOe15fZKYKNLFjctmD7ok5ak9H3NMham82b9FkuwVIgL6G_GwkQr02TPRJRYgIYI7C72iSXAunqHGWy6I=w184-h184-n-k-no" alt="Gamble">
   <div id="result"></div>
 
