--- a/t2.html
+++ b/t2.html
@@ -37,6 +37,7 @@
 
   <div id="coinLabel">Coins: 0</div>
   <div id="powerLabel">Storage Power: 1</div>
+  <div>lose or win coins! below the text in the image</div>
   <img id="gambleButton" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/Kiloware.JPG/960px-Kiloware.JPG" alt="Gamble">
   <div id="result"></div>
 
