--- a/gks.html
+++ b/gks.html
@@ -228,7 +228,7 @@
     function stealFromBot() {
       const now = Date.now();
       if (now - lastStealByPlayer < 0000 || coins < 15) {
-        alert("You need to wait 24 hours and have at least 15 coins!");
+        alert("You need to have at least 15 coins!");
         return;
       }
 
